fix: change class name and separated selectors and properties according rule 3.8 and 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -1,60 +1,67 @@
 /* Basic Style */
-body {
+.body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
 }
 
-.aaa {
+.img-details {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
 
-.aaa img {
+.img-details__info {
     width: 100%;
 }
 
-.aaa .more_inf {
+.img-details .img-details__info {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.img-details { text-align: center;
+}
 }
 
-}
-.centered-main-page-element {
+.main-page {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
 
-.task {
+.task-form__input {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
 
-.task-row-wrapper {
+.task-form {
     display: flex;
 }
 
-ul {
+.incomplete-tasks,
+.completed-tasks {
     margin:0;
     padding: 0px;
 }
 
-li, h3 {
+.incomplete-tasks,
+.edit-mode,
+.completed-item,
+.todo-text
+.complete-text {
     list-style:none;
 }
 
-input,button{
+button,
+input {
     outline:none;
 }
 
-button {
+.btn-edit,
+.btn-delete {
     background: none;
     border: 0px;
     color: #888;
@@ -64,13 +71,15 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.btn-edit,
+.btn-delete:hover {
     color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for='new-task'] {
+.todo-text,
+.complete-text,
+.task-input {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -80,7 +89,10 @@ label[for='new-task'] {
     text-transform: uppercase;
 }
 
-input[type="text"] {
+.task-form__input,
+.incomplete-item__input,
+.edit-mode__input,
+.completed-item__input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -93,17 +105,20 @@ input[type="text"] {
     color: #888;
 }
 
-input[type="text"]:focus {
+.task-form__input,
+.incomplete-item__input,
+.edit-mode__input,
+.completed-item__input:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.task-input {
     display: block;
     margin: 0 0 20px;
 }
 
-input#new-task {
+.task-form__input {
     width: 318px;
 }
 
@@ -122,47 +137,54 @@ li > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.item-checkbox {
     margin: 0 10px;
 }
 
-li > label {
+.incomplete-item__task,
+.edit-mode__task,
+.completed-item__task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
 
-li >    input[type="text"] {
+.task-form__input,
+.incomplete-item__input,
+.edit-mode__input,
+.completed-item__input  {
     width: 226px
 }
 
-button.delete img {
+.btn-delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.btn-delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-item__task {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.incomplete-item__input,
+.edit-mode__input,
+.completed-item__input {
     display:none
 }
 
-ul li.editMode input[type=text] {
+.edit-mode__input {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+.edit-mode__task {
     display:none;
 }
